fix null problems